2020-04-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 10

2018-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Drop compatibility with TYPO3 7, prepare for TYPO3, code cleanup, resolves #3
	* Add functional tests
	* Release version 2.3.0

2018-07-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated documentation regarding allowed absolute file paths
	* Released version 2.2.2

2018-02-17 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated headers initialization
	* Released version 2.2.1

2018-01-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.2.0

2018-01-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Used new FileUtility for reading files, resolves #2

2017-04-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.1.0

2017-04-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 8, resolves #1

2016-05-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.0.0, resolves #76007

2016-04-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Refactored for TYPO3 CMS 7, resolves #75928

2014-06-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated code examples in documentation, resolves #59352
	* Released version 1.1.0, resolves #57768

2014-04-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Implemented new API from base connector, resolves #57555
	* Verified compatibility with TYPO3 CMS 6.2, resolves #57586

2013-09-23 Prakash A Bhat (Cobweb)  <typo3@cobweb.ch>

	* Initial Release version 1.0.0