@@ -17,6 +17,7 @@ namespace Cobweb\SvconnectorJson\Service;
 use Cobweb\Svconnector\Exception\SourceErrorException;
 use Cobweb\Svconnector\Service\ConnectorBase;
 use Cobweb\Svconnector\Utility\FileUtility;
+use TYPO3\CMS\Core\Messaging\AbstractMessage;
 use TYPO3\CMS\Core\Utility\GeneralUtility;
 
 /**
@@ -43,6 +44,22 @@ class ConnectorJson extends ConnectorBase
     {
         parent::init();
         return true;
+    }
+
+    /**
+     * Checks the connector configuration and returns notices, warnings or errors, if any.
+     *
+     * @param array $parameters Connector call parameters
+     * @return array
+     */
+    public function checkConfiguration($parameters): array
+    {
+        $result = parent::checkConfiguration($parameters);
+        // The "uri" parameter is mandatory
+        if (empty($parameters['uri'])) {
+            $result[AbstractMessage::ERROR][] = $this->sL('LLL:EXT:svconnector_json/Resources/Private/Language/locallang.xlf:no_json_defined');
+        }
+        return $result;
     }
 
     /**
@@ -133,9 +150,18 @@ class ConnectorJson extends ConnectorBase
      */
     protected function query($parameters)
     {
-        // Check if the json's URI is defined
-        if (empty($parameters['uri'])) {
-            $message = $this->sL('LLL:EXT:svconnector_json/Resources/Private/Language/locallang.xlf:no_json_defined');
+        // Check the configuration
+        $problems = $this->checkConfiguration($parameters);
+        // Log all issues and raise error if any
+        $this->logConfigurationCheck($problems);
+        if (count($problems[AbstractMessage::ERROR]) > 0) {
+            $message = '';
+            foreach ($problems[AbstractMessage::ERROR] as $problem) {
+                if ($message !== '') {
+                    $message .= "\n";
+                }
+                $message .= $problem;
+            }
             $this->raiseError(
                     $message,
                     1299257883,
