@@ -1,3 +1,7 @@
+2020-04-12 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Implement new configuration check API, resolves #5
+
 2020-04-10 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Ensure compatibility with TYPO3 10
